@@ -1,7 +1,10 @@
 package me.nexo.items.estaciones;
 
+import me.nexo.core.utils.NexoColor;
 import me.nexo.items.managers.ItemManager;
 import me.nexo.items.NexoItems;
+import net.kyori.adventure.text.serializer.legacy.LegacyComponentSerializer;
+import net.kyori.adventure.text.serializer.plain.PlainTextComponentSerializer;
 import org.bukkit.Bukkit;
 import org.bukkit.Material;
 import org.bukkit.Sound;
@@ -15,27 +18,35 @@ import org.bukkit.inventory.ItemStack;
 import org.bukkit.inventory.meta.ItemMeta;
 import org.bukkit.persistence.PersistentDataType;
 
+import java.util.Arrays;
 import java.util.HashMap;
-import java.util.List;
 
 public class DesguaceListener implements Listener {
 
-    // 🟢 ARQUITECTURA: Usamos la clase principal de NexoItems
     private final NexoItems plugin;
-    private final String TITULO_MENU = "§8♻ Desguace del Nexo";
+
+    // 🎨 Títulos limpios y seguros para Paper 1.21
+    public static final String TITLE_PLAIN = "» Desguace del Nexo";
+    public static final String MENU_TITLE = "&#555555<bold>»</bold> &#FF5555Desguace del Nexo";
 
     public DesguaceListener(NexoItems plugin) {
         this.plugin = plugin;
     }
 
+    private String serialize(String hex) {
+        return LegacyComponentSerializer.legacySection().serialize(NexoColor.parse(hex));
+    }
+
     public void abrirMenu(Player jugador) {
-        Inventory inv = Bukkit.createInventory(null, 27, TITULO_MENU);
+        Inventory inv = Bukkit.createInventory(null, 27, NexoColor.parse(MENU_TITLE));
 
         // Decoración
         ItemStack cristal = new ItemStack(Material.GRAY_STAINED_GLASS_PANE);
         ItemMeta metaCristal = cristal.getItemMeta();
-        metaCristal.setDisplayName(" ");
-        cristal.setItemMeta(metaCristal);
+        if (metaCristal != null) {
+            metaCristal.setDisplayName(serialize(" "));
+            cristal.setItemMeta(metaCristal);
+        }
 
         for (int i = 0; i < 27; i++) {
             inv.setItem(i, cristal);
@@ -47,15 +58,17 @@ public class DesguaceListener implements Listener {
         // Botón de Destruir
         ItemStack trituradora = new ItemStack(Material.BLAST_FURNACE);
         ItemMeta metaTrituradora = trituradora.getItemMeta();
-        metaTrituradora.setDisplayName("§c§lDESTRUIR ÍTEM");
-        metaTrituradora.setLore(List.of(
-                "§7Haz clic aquí para destruir el",
-                "§7arma de la izquierda y convertirla",
-                "§7en §ePolvo Estelar§7.",
-                "",
-                "§4⚠ ¡ESTA ACCIÓN NO SE PUEDE DESHACER ⚠"
-        ));
-        trituradora.setItemMeta(metaTrituradora);
+        if (metaTrituradora != null) {
+            metaTrituradora.setDisplayName(serialize("&#FF5555<bold>DESTRUIR ACTIVO</bold>"));
+            metaTrituradora.setLore(Arrays.asList(
+                    serialize("&#AAAAAAHaz clic aquí para destruir el"),
+                    serialize("&#AAAAAAactivo de la izquierda y reciclarlo"),
+                    serialize("&#AAAAAAen &#FFAA00Polvo Estelar&#AAAAAA."),
+                    serialize(" "),
+                    serialize("&#FF5555<bold>⚠ ESTA ACCIÓN ES IRREVERSIBLE ⚠</bold>")
+            ));
+            trituradora.setItemMeta(metaTrituradora);
+        }
         inv.setItem(15, trituradora);
 
         jugador.openInventory(inv);
@@ -63,7 +76,8 @@ public class DesguaceListener implements Listener {
 
     @EventHandler
     public void alHacerClic(InventoryClickEvent event) {
-        if (!event.getView().getTitle().equals(TITULO_MENU)) return;
+        String tituloLimpio = PlainTextComponentSerializer.plainText().serialize(event.getView().title());
+        if (!tituloLimpio.equals(TITLE_PLAIN)) return;
 
         Player jugador = (Player) event.getWhoClicked();
         int slot = event.getRawSlot();
@@ -84,19 +98,19 @@ public class DesguaceListener implements Listener {
             ItemStack arma = inv.getItem(11);
 
             if (arma == null || arma.getType() == Material.AIR) {
-                jugador.sendMessage("§cColoca un arma RPG en la ranura vacía.");
+                jugador.sendMessage(NexoColor.parse("&#FF5555[!] Inserta un activo en la bahía de desguace (izquierda)."));
                 jugador.playSound(jugador.getLocation(), Sound.ENTITY_VILLAGER_NO, 1f, 1f);
                 return;
             }
 
             if (!arma.hasItemMeta() || !arma.getItemMeta().getPersistentDataContainer().has(ItemManager.llaveNivelMejora, PersistentDataType.INTEGER)) {
-                jugador.sendMessage("§cEse ítem no es un arma mágica del Nexo. No se puede reciclar.");
+                jugador.sendMessage(NexoColor.parse("&#FF5555[!] Activo incompatible. No posee la firma mágica del Nexo requerida para reciclar."));
                 jugador.playSound(jugador.getLocation(), Sound.ENTITY_VILLAGER_NO, 1f, 1f);
                 return;
             }
 
             // Calculamos cuánto polvo dar (1 base + 1 por cada nivel que tuviera el arma)
-            int nivel = arma.getItemMeta().getPersistentDataContainer().get(ItemManager.llaveNivelMejora, PersistentDataType.INTEGER);
+            int nivel = arma.getItemMeta().getPersistentDataContainer().getOrDefault(ItemManager.llaveNivelMejora, PersistentDataType.INTEGER, 0);
             int cantidadPolvo = 1 + nivel;
 
             // Destruimos el arma
@@ -112,7 +126,7 @@ public class DesguaceListener implements Listener {
                 jugador.getWorld().dropItemNaturally(jugador.getLocation(), sobrante.get(0));
             }
 
-            jugador.sendMessage("§a§l¡RECICLAJE EXITOSO! §7Obtuviste §e" + cantidadPolvo + "x Polvo Estelar§7.");
+            jugador.sendMessage(NexoColor.parse("&#55FF55[✓] <bold>¡RECICLAJE EXITOSO!</bold> Materia recuperada: &#FFAA00" + cantidadPolvo + "x Polvo Estelar."));
             jugador.playSound(jugador.getLocation(), Sound.BLOCK_GRINDSTONE_USE, 1f, 1f);
         }
     }
@@ -120,7 +134,9 @@ public class DesguaceListener implements Listener {
     // ANTI-DUPE
     @EventHandler
     public void alCerrar(InventoryCloseEvent event) {
-        if (!event.getView().getTitle().equals(TITULO_MENU)) return;
+        String tituloLimpio = PlainTextComponentSerializer.plainText().serialize(event.getView().title());
+        if (!tituloLimpio.equals(TITLE_PLAIN)) return;
+
         Player jugador = (Player) event.getPlayer();
         ItemStack arma = event.getInventory().getItem(11);
 
